@@ -79,22 +79,22 @@ log_gm: 40
 // Log NPC 'logmes' commands
 log_npc: 0
 
-// Log CHAT (currently only: Party, Guild, Whisper)
+// Log CHAT (Global, Whisper, Party, Guild, Main chat)
 // LOGGING FILTERS [Lupus]
 //=============================================================
-//0 = Don't log at all
-//1 = Log any chat messages
+//00 = Don't log at all
 //Advanced Filter Bits: ||
-//2 - Log Whisper messages
-//3 - Log Party messages
-//4 - Log Guild messages
-//5 - Log Common messages (not implemented)
-//6 - Don't log when WOE is on
+//01 - Log Global messages
+//02 - Log Whisper messages
+//04 - Log Party messages
+//08 - Log Guild messages
+//16 - Log Main chat messages
+//32 - Don't log anything when WOE is on
 //Example:
-//log_chat: 1	= logs ANY messages
-//log_chat: 6	= logs both Whisper & Party messages
-//log_chat: 8	= logs only Guild messages
-//log_chat: 18	= logs only Whisper, when WOE is off
+//log_chat:  6	= logs both Whisper & Party messages
+//log_chat:  8	= logs only Guild messages
+//log_chat: 34	= logs only Whisper, when WOE is off
+//log_chat: 31	= logs EVERYTHING
 
 log_chat: 0
 
